[JRCLUST (JRC) change log]
James Jun, HHMI-Janelia Research Campus, Applied Physics and Instrumentation Group

--------------------------------------------------------------------
[2017/10/8: v3.0.6]
Improved automated clustering
  Setting the flag fRepeat_clu=1 (default) will re-runs clustering for the lower half of the cluster amplitudes.
  For Neuropixels probes, the default number of sites for feature extraction is increased:
    nSites_spk = 1+2*maxSite-nSites_ref = 1+6.5*2-4 = 10
CUDA codes are recomplied to accept up to 45 feature dimensions (previously 30).
  The max number of dimensions is stored in "nC_max" parameter (read-only, do not change).

[2017/9/29]
Bugfix: negative rho is fixed. This was caused by dc==0 (radius of the neighbor-finding spheres)
  when the median distance-cutoff was zero. This is fixed by discarding zero-distance values before
  calculating the quantile values.
Display fix: curves in rho-delta plot (bottom-right plot in the manual view) is suppressed.
  These spikes come from delta==0 values whose nearest pair has exactly same feature scores.
  These spikes are now hidden from the display.
"jrc gui" menu items are disabled if can't run given the current state, just like the buttons do.
Current version number of JRCLUST is overwritten in P.version after running.

[2017/9/28]
New user interface: jrc gui
  It opens a GUI that allows users to access majority of the JRCLUST commands via menu or buttons.
  This is recommended for new users who are not familiar with JRCLUST commands.
"jrc git-pull version#" will download a specific version # tag.
  "jrc git-pull" will download the latest release.
Bugfix: "version" field in .prm file is correctly updated.

[2017/9/27]
Added a parameter validater. Incorrect parameter values will be rejected with warning messages.
Bugfix: "vcFilter" issue is resolved for older format.

[2017/9/26]
jrc can run from any path after adding path to the jrclust location